fix: order again button has 100% width on mobile

--- a/src/pages/Dashboard/Orders/UserOrders.module.scss
+++ b/src/pages/Dashboard/Orders/UserOrders.module.scss
@@ -64,8 +64,6 @@
     
   }
 
-  
-
   .orderProductPreview {
     width: 58px;
     height: 58px;
@@ -220,9 +218,9 @@
       text-align: left;
       margin: 0.5rem 0;
     }
-
+  }
+  .orderInfo {
     .orderAgainButton {
-      width: 100%;
       max-width: 100%;
     }
   }
